# digitalcommunicationassignment

./: CMakeLists.txt  README.md
include/: FFTWorker.h  Filter1.h  circular.h  fft.h  mainwindow.h  rawdatatowavfile.h  readfile.h  realtime.h  struct.h  utils_VkFFT.h
resources/: a.csv
src/: FFTWorker.cpp  Filter1.cpp  fft.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  rawdatatowavfile.cpp  readfile.cpp  realtime.cpp  utils_VkFFT.cpp
